Infrastructure/K8s/mcabank-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcabank-auth
  labels:
    app: mcabank-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcabank-auth
  template:
    metadata:
      labels:
        app: mcabank-auth
    spec:
      containers:
        - name: mcabank-auth
          image: rasteiro11/mcabank-auth:20250915003642
          imagePullPolicy: Always
          ports:
            - containerPort: 5001   # HTTP REST
            - containerPort: 50051  # gRPC
---
apiVersion: v1
kind: Service
metadata:
  name: mcabank-auth-http
  labels:
    app: mcabank-auth
spec:
  type: NodePort
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: mcabank-auth

---
apiVersion: v1
kind: Service
metadata:
  name: mcabank-auth-grpc
  labels:
    app: mcabank-auth
spec:
  type: NodePort
  ports:
    - port: 50051
      targetPort: 50051
  selector:
    app: mcabank-auth

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcabank-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mcabank.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcabank-auth-http
                port:
                  number: 5001
